unpackaged/main/default/objects/CRC_Related_Request__c/CRC_Related_Request__c.object-meta.xml
<CustomObject>
    <label>CRC Related Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Related Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRC Related Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>