unpackaged/main/default/objects/CRC_Related_Request__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <formula>CRC_Related_Request__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Account</label>
    <type>Text</type>
</CustomField>