unpackaged/main/default/objects/CRC_Related_Request__c/fields/Child_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_Status__c</fullName>
    <formula>TEXT( CRC_Related_Request__r.Request_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Status</label>
    <type>Text</type>
</CustomField>