unpackaged/main/default/objects/CRC_Related_Request__c/fields/CPEC_Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>CPEC_Parent_Request__c</fullName>
    <label>Parent Request</label>
    <referenceTo>CPEC_Request__c</referenceTo>
    <relationshipName>CPEC_Related_Parent_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>