unpackaged/main/default/objects/CRC_Related_Request__c/fields/CRC_Related_Request__c.field-meta.xml
<CustomField>
    <fullName>CRC_Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <referenceTo>CPEC_Request__c</referenceTo>
    <relationshipLabel>CRC Related Requests (Related Request)</relationshipLabel>
    <relationshipName>CPEC_Related_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>