unpackaged/main/default/objects/CRC_Related_Request__c/fields/Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status__c</fullName>
    <formula>TEXT(CPEC_Parent_Request__r.Request_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Status</label>
    <type>Text</type>
</CustomField>